--- a/Minimalistic Code Editor/Minimalistic Code Editor/Minimalistic Code Editor.csproj
+++ b/Minimalistic Code Editor/Minimalistic Code Editor/Minimalistic Code Editor.csproj
@@ -10,6 +10,9 @@
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="CodeEditor\CodeEditor.xaml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Common" Version="8.1.0" />
@@ -20,5 +23,11 @@
 
   <ItemGroup>
     <Folder Include="Assets\TabViewIcons\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="CodeEditor\CodeEditor.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
